# seet

./: .gitignore  GUI_MIGRATION.md  README.md  SEET_env.yaml  pyproject.toml  requirements.txt
notebooks/: calculation_of_eyelid_parameters.ipynb  image_visualization.ipynb  invert_camera.ipynb  limbus_only_eye_tracking.ipynb  sampling_visualization.ipynb  scene_model_visualization.ipynb  time_undistortion_methods.ipynb  utils.py
notebooks/assorted/: calculation_of_eyelid_parameters.ipynb
notebooks/eye_visibility/: Eye_Visibility_ProcessFlow.vsdx  analyze_iris_data.ipynb  analyze_visibility_data.ipynb  generate_iris_data.ipynb  generate_visibility_data.ipynb
notebooks/passthrough_comfort/: depth_and_disparity_errors.ipynb  stereo_perception_errors.py  stereo_perception_utils.py
notebooks/sensitivity_analysis/: analyze_covariance_data.ipynb  covariance_analysis_utils.py  generate_covariance_data.ipynb
notebooks/visualization/: .gitignore  2D_animation.ipynb  2D_visualization.ipynb  3D_animation.ipynb  3D_visualization.ipynb  eye_tracking_2D_movement_animation.avi
seet/: __init__.py
seet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
seet/core/: __init__.py  geometry.py  groups.py  make_ephemeral.py  node.py  numeric.py
seet/device/: __init__.py  device_configs.py  device_model.py  leds.py  occluder.py  (+4 more)
sensitivity_analysis/: base_covariance_calculator.py  camera_covariance_calculator.py  eye_pose_covariance.py  eye_shape_covariance.py  features_covariance_calculator.py  leds_covariance_calculator.py  sensitivity_analysis_utils.py
tests/: tests_utils.py
(+213 files in other folders)
